Se agregó vista "Registrarse"

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,9 +4,9 @@
             TorneoDeportivo
         </a>
         <div class="f-right">
-            <a class="navbar-option navbar-a" href="#">Inicio</a>
-            <a class="navbar-option navbar-a" href="#">Iniciar Sesión</a>
-            <a class="navbar-option navbar-a" href="#">Registrarse</a>
+            <a class="navbar-option navbar-a" routerLink="/" href="#">Inicio</a>
+            <a class="navbar-option navbar-a" routerLink="/signin" href="#">Iniciar Sesión</a>
+            <a class="navbar-option navbar-a" routerLink="/signup" href="#">Registrarse</a>
             <button class="navbar-option burger-btn"><i class="fal fa-bars"></i></button>
         </div>
     </div>
