--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -132,8 +132,19 @@ body {
     min-width: 500px
 }
 
+.shadowed-div {
+    box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
+}
+
 .cont-centered {
     text-align: center;
+}
+
+.grid-4 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
 @media screen and (max-width: 630px) {
