--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -6,10 +6,10 @@
         <div class="cont-centered">
             <h2>INICIAR SESION</h2>
         </div>
-        <form method="post">
+        <form method="post" ngNativeValidate>
             <div class="form-item-container">
-                <h4>Nombre de Usuario</h4>
-                <input class="input-field w-std" type="text" name="username" placeholder="Username">
+                <h4>Email</h4>
+                <input class="input-field w-std" type="email" name="username" placeholder="example@domain.com">
             </div>
             <div class="form-item-container">
                 <h4>Contraseña</h4>
