Se creo vista mis ligas

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar">
     <div class="navbar-container">
-        <a class="logo" href="#">
+        <a class="logo" routerLink="/">
             TorneoDeportivo
         </a>
         <div class="f-right">
-            <a class="navbar-option navbar-a" routerLink="/" href="#">Inicio</a>
-            <a class="navbar-option navbar-a" routerLink="/signin" href="#">Iniciar Sesión</a>
-            <a class="navbar-option navbar-a" routerLink="/signup" href="#">Registrarse</a>
+            <a class="navbar-option navbar-a" routerLink="/">Inicio</a>
+            <a class="navbar-option navbar-a" routerLink="/signin">Iniciar Sesión</a>
+            <a class="navbar-option navbar-a" routerLink="/signup">Registrarse</a>
         </div>
     </div>
     <button class="navbar-option burger-btn"><i class="fal fa-bars"></i></button>
