--- a/frontend/src/app/components/index/index.component.css
+++ b/frontend/src/app/components/index/index.component.css
@@ -2,6 +2,11 @@
     width: 100px;
 }
 
+.option-panel {
+    text-decoration: none;
+    color: black
+}
+
 .option-panel img {
     width: 65px;
 }
