--- a/frontend/src/app/components/user/user-myleagues/user-myleagues.component.html
+++ b/frontend/src/app/components/user/user-myleagues/user-myleagues.component.html
@@ -1,76 +1,7 @@
 <div class="m-container w-100">
     <h2 class="m-b-20">MIS LIGAS</h2>
+    <button class="btn m-b-20 add-btn"><i class="fas fa-plus"></i> Agregar Liga</button>
     <div class="grid-4">
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-            <div class="delete-edit-buttons-container">
-                <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-            <div class="delete-edit-buttons-container">
-                <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-            <div class="delete-edit-buttons-container">
-                <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-            <div class="delete-edit-buttons-container">
-                <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-            <div class="delete-edit-buttons-container">
-                <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-            <div class="delete-edit-buttons-container">
-                <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-
-        <div style="position: relative" class="m-container shadowed-div cont-centered">
-            <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-            <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-            <div class="delete-edit-buttons-container">
-                <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-            </div>
-        </div>
-
         <div style="position: relative" class="m-container shadowed-div cont-centered">
             <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
             <h5 class="m-b-20 m-h5">Premier League</h5>
