Se agrego vista graficas

--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -20,15 +20,7 @@
                     <span>Usuarios</span>
                 </div>
             </a>
-            <a href="#" class="m-container shadowed-div option-panel">
-                <div>
-                    <img src="../../../assets/dist/img/history_black_24dp.svg" alt="soccer-ball.jpg">
-                </div>
-                <div>
-                    <span>Historial</span>
-                </div>
-            </a>
-            <a href="#" class="m-container shadowed-div option-panel">
+            <a href="#" id="charts" class="m-container shadowed-div option-panel">
                 <div>
                     <img src="../../../assets/dist/img/timeline_black_24dp.svg" alt="soccer-ball.jpg">
                 </div>
