--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/get-table/get-table.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/get-table/get-table.component.html
@@ -1,1 +1,75 @@
-<p>get-table works!</p>
+<div class="m-container w-100">
+    <h2 class="m-b-20">TABLA DE RESULTADOS</h2>
+    <table class="table-standard m-table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Equipo</th>
+                <th>Puntos</th>
+                <th>PG</th>
+                <th>PE</th>
+                <th>PP</th>
+                <th>GF</th>
+                <th>GC</th>
+                <th>DF</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>12</td>
+                <td>32</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>4</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>12</td>
+                <td>32</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>4</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>12</td>
+                <td>32</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>4</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>12</td>
+                <td>32</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>4</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>12</td>
+                <td>32</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>4</td>
+                <td>5</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
