--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
@@ -7,7 +7,7 @@
             <h1 class="m-b-20 title-league m-t-20">Liga Lorem Ipsum</h1>
             <div class="grid-2">
                 <button routerLink='/user/my-leagues/league/add-team' class="btn add-btn"><i class="fas fa-plus-circle"></i> Agregar Equipo</button>
-                <button class="btn purple-button"><i class="fas fa-table"></i> Ver Tabla</button>
+                <button routerLink="/user/my-leagues/league/get-table" class="btn purple-button"><i class="fas fa-table"></i> Ver Tabla</button>
                 <button class="btn yellow-button "><i class="fas fa-chart-pie"></i> Gráfica</button>
                 <button class="btn turquoise-button"><i class="fas fa-calendar-alt"></i> Jornadas</button>
             </div>
