Se agregaron vistas para graficas

--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -4,7 +4,7 @@
             <h2>ADMINISTRAR</h2>
         </div>
         <div class="grid-2">
-            <a href="#" class="m-container shadowed-div option-panel">
+            <a routerLink="admin/leagues" class="m-container shadowed-div option-panel">
                 <div>
                     <img src="../../../assets/dist/img/sports_soccer_black_24dp.svg" alt="soccer-ball.jpg">
                 </div>
