--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/leaguebyid-journey/leaguebyid-journey.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/leaguebyid-journey/leaguebyid-journey.component.html
@@ -1,1 +1,63 @@
-<p>leaguebyid-journey works!</p>
+<div class="m-container w-100">
+    <h2 class="m-b-20">JORNADAS</h2>
+    <table class="table-standard m-table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Local</th>
+                <th>Visitante</th>
+                <th>Marcador</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td>0 - 1</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td><button class="btn">Agregar resultado</button></td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td>0 - 1</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td><button class="btn">Agregar resultado</button></td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td>0 - 1</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td><button class="btn">Agregar resultado</button></td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td>0 - 1</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Lorem</td>
+                <td>Ipsum</td>
+                <td><button class="btn">Agregar resultado</button></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
