Se arregló ruta de backend

--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -20,7 +20,7 @@
                     <span>Usuarios</span>
                 </div>
             </a>
-            <a href="#" id="charts" class="m-container shadowed-div option-panel">
+            <a routerLink="/admin/charts" id="charts" class="m-container shadowed-div option-panel">
                 <div>
                     <img src="../../../assets/dist/img/timeline_black_24dp.svg" alt="soccer-ball.jpg">
                 </div>
