--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -6,14 +6,14 @@
         <div class="cont-centered">
             <h2>INICIAR SESION</h2>
         </div>
-        <form method="post" ngNativeValidate>
+        <form (submit)="signIn()" method="post" ngNativeValidate>
             <div class="form-item-container">
-                <h4>Email</h4>
-                <input class="input-field w-std" type="email" name="username" placeholder="example@domain.com">
+                <h4>Usuario</h4>
+                <input [(ngModel)]="user.usuario" required="required" class="input-field w-std" type="text" name="usuario" placeholder="Username">
             </div>
             <div class="form-item-container">
                 <h4>Contraseña</h4>
-                <input class="input-field w-std" type="password" name="password" placeholder="Password">
+                <input [(ngModel)]="user.password" required="required" class="input-field w-std" type="password" name="password" placeholder="Password">
             </div>
             <div class="form-item-container">
                 <input class="btn w-100" type="submit" value="Iniciar Sesión">
