--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -54,6 +54,11 @@ body {
     align-items: center;
 }
 
+.f-vertical-centered-container {
+    display: flex;
+    align-items: center;
+}
+
 .btn {
     background-color: #042030;
     color: white;
