Se agregaron guards y detalles en diseño

--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -13,7 +13,7 @@
                         <li>Jeffry Alexander Ordoñez Pacheco - 2019042</li>
                         <li>Jorge Eduardo Morataya Socop - 2019041</li>
                     </ul>
-                    <p>Para acceder a las funcionalidades del programa puede <a href=" ">Iniciar Sesión</a> o <a href=" ">Registrarse</a></p>
+                    <p>Para acceder a las funcionalidades del programa puede <a href="/signin">Iniciar Sesión</a> o <a href="/signup">Registrarse</a></p>
                     <i class="m-t-20 " style="display: block; color: #aaa;">@2021 - IN6BM</i>
                 </div>
             </div>
