--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -5,15 +5,15 @@
                 <div>
                     <h2>BIENVENIDO</h2>
                     <hr>
-                    <p class=" m-b-20 " style="font-size: 20px; margin-top: 10px; ">Este es el proyecto del <b>Grupo #2</b></p>
+                    <p class="m-b-20" style="font-size: 20px; margin-top: 10px;">Este es el proyecto del <b>Grupo #2</b></p>
                     <h4>Integrantes</h4>
-                    <ul class="m-b-20 ">
+                    <ul class="m-b-20">
                         <li>Oscar Joaquín Sian Oron - 2019017 (Líder)</li>
                         <li>Luis Rodrigo Morales Florián - 2019047</li>
                         <li>Jeffry Alexander Ordoñez Pacheco - 2019042</li>
                         <li>Jorge Eduardo Morataya Socop - 2019041</li>
                     </ul>
-                    <p>Para acceder a las funcionalidades del programa puede <a href="/signin">Iniciar Sesión</a> o <a href="/signup">Registrarse</a></p>
+                    <p>Para acceder a las funcionalidades del programa puede <a routerLink="/signin">Iniciar Sesión</a> o <a routerLink="/signup">Registrarse</a></p>
                     <i class="m-t-20 " style="display: block; color: #aaa;">@2021 - IN6BM</i>
                 </div>
             </div>
