Se mejoró el index y el inicio de sesión

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,8 +10,12 @@
                 <a class="navbar-option navbar-a" routerLink="/signup">Registrarse</a>
             </ng-container>
             <ng-template #loggedIn>
-                <ng-container [ngSwitch]></ng-container>
                 <a class="navbar-option navbar-a" routerLink="/">Inicio</a>
+                <ng-container [ngSwitch]="role">
+                    <ng-container *ngSwitchCase="'Rol_Cliente'">
+                        <a class="navbar-option navbar-a" routerLink="/user/my-leagues">Mis Ligas</a>
+                    </ng-container>
+                </ng-container>
                 <a (click)="loginService.logout()" style="cursor: pointer;" class="navbar-option navbar-a">Cerrar Sesión</a>
             </ng-template>
         </div>
