--- a/frontend/src/app/components/index/index.component.css
+++ b/frontend/src/app/components/index/index.component.css
@@ -32,3 +32,9 @@
     background-position-y: 100%;
     background-repeat: no-repeat;
 }
+
+@media screen and (max-width: 1135px) {
+    .grid-2 {
+        grid-template-columns: 1fr;
+    }
+}
