--- a/frontend/src/app/components/user/user-myleagues/user-myleagues.component.html
+++ b/frontend/src/app/components/user/user-myleagues/user-myleagues.component.html
@@ -5,7 +5,7 @@
         <div style="position: relative" class="m-container shadowed-div cont-centered">
             <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
             <h5 class="m-b-20 m-h5">Premier League</h5>
-            <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
+            <a routerLink="/user/my-leagues/league" class="btn a-formatted">Ver Liga &raquo;</a>
             <div class="delete-edit-buttons-container">
                 <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
                 <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
