Se configuró vista Usuario > Mis ligas
También se agregó ruta "obtenerIdentidad"

--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -76,8 +76,8 @@
                                 <li>Jeffry Alexander Ordoñez Pacheco - 2019042</li>
                                 <li>Jorge Eduardo Morataya Socop - 2019041</li>
                             </ul>
-                            <p>Para acceder a las funcionalidades del programa puede <a routerLink="/signin">Iniciar Sesión</a> o <a routerLink="/signup">Registrarse</a></p>
-                            <span class="m-t-20" style="font-size:20px; display: block;">¡Bienvenido <b>{{username}}</b>!</span>
+                            <span class="m-b-20" style="font-size:20px; display: block;">¡Bienvenido <b>{{username}}</b>!</span>
+                            <p>Empiece ya a <a routerLink="/user/my-leagues">Administrar sus ligas</a></p>
                             <i class="m-t-20 " style="display: block; color: #aaa;">@2021 - IN6BM</i>
                         </div>
                     </div>
