--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
@@ -1,10 +1,10 @@
 <div class="m-container w-100">
     <div class="row">
         <div class="left-column cont-centered">
-            <img class="logo m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png " alt="logo-img ">
+            <img class="logo m-b-20" src={{league.image}} alt="logo-img ">
         </div>
         <div class="right-column">
-            <h1 class="m-b-20 title-league m-t-20">Liga Lorem Ipsum</h1>
+            <h1 class="m-b-20 title-league m-t-20">{{league.nombre}}</h1>
             <div class="grid-2">
                 <button routerLink='/user/my-leagues/league/add-team' class="btn add-btn"><i class="fas fa-plus-circle"></i> Agregar Equipo</button>
                 <button routerLink="/user/my-leagues/league/get-table" class="btn purple-button"><i class="fas fa-table"></i> Ver Tabla</button>
@@ -14,79 +14,24 @@
         </div>
     </div>
     <div class="row m-t-40">
+        <h2 class="m-b-20 m-t-20">TODOS LOS EQUIPOS</h2>
         <div class="grid-4">
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-                </div>
-            </div>
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-                </div>
-            </div>
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-                </div>
-            </div>
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-                </div>
-            </div>
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-                </div>
-            </div>
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-                </div>
-            </div>
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
-                </div>
-            </div>
-            <div style="position: relative" class="m-container shadowed-div cont-centered">
-                <img style="width: 95%" class="m-b-20" src="https://seeklogo.com/images/P/premier-league-new-logo-D22A0CE87E-seeklogo.com.png" alt="logo-img">
-                <h5 class="m-b-20 m-h5">Premier League</h5>
-                <a href="#" class="btn a-formatted">Ver Liga &raquo;</a>
-                <div class="delete-edit-buttons-container">
-                    <button class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                    <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
+            <div *ngFor="let x of teams" style="position: relative" class="m-container shadowed-div cont-centered f-centered-container">
+                <div>
+                    <img style="width: 95%" class="m-b-20" src={{x.imagen}} alt="logo-img">
+                    <h5 class="m-b-20 m-h5">{{x.nombre}}</h5>
+                    <div class="delete-edit-buttons-container">
+                        <button routerLink="/user/my-leagues/{{idleague}}/edit/{{x._id}}" class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
+                        <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
+        <ng-container *ngIf="teams.length === 0">
+            <div class="cont-centered">
+                <img class="m-b-40" id="sad-face" src="https://img.icons8.com/ios/452/sad.png" alt="sad-face.png">
+                <h1>Aún no hay equipos :(</h1>
+            </div>
+        </ng-container>
     </div>
 </div>
