Se modificó el index

--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -77,7 +77,7 @@
                                 <li>Jorge Eduardo Morataya Socop - 2019041</li>
                             </ul>
                             <span class="m-b-20" style="font-size:20px; display: block;">¡Bienvenido <b>{{username}}</b>!</span>
-                            <p>Empiece ya a <a routerLink="/user/my-leagues">Administrar sus ligas</a></p>
+                            <p><a routerLink="/user/my-leagues"> <button class="btn">Administra tus ligas ya!</button> </a></p>
                             <i class="m-t-20 " style="display: block; color: #aaa;">@2021 - IN6BM</i>
                         </div>
                     </div>
