--- a/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
+++ b/frontend/src/app/components/user/user-myleagues-leaguebyid/user-myleagues-leaguebyid.component.html
@@ -6,7 +6,7 @@
         <div class="right-column">
             <h1 class="m-b-20 title-league m-t-20">{{league.nombre}}</h1>
             <div class="grid-2">
-                <button routerLink='/user/my-leagues/league/add-team' class="btn add-btn"><i class="fas fa-plus-circle"></i> Agregar Equipo</button>
+                <button (click)="addTeam()" class="btn add-btn"><i class="fas fa-plus-circle"></i> Agregar Equipo</button>
                 <button routerLink="/user/my-leagues/league/get-table" class="btn purple-button"><i class="fas fa-table"></i> Ver Tabla</button>
                 <button class="btn yellow-button "><i class="fas fa-chart-pie"></i> Gráfica</button>
                 <button class="btn turquoise-button"><i class="fas fa-calendar-alt"></i> Jornadas</button>
@@ -22,7 +22,7 @@
                     <h5 class="m-b-20 m-h5">{{x.nombre}}</h5>
                     <div class="delete-edit-buttons-container">
                         <button routerLink="/user/my-leagues/{{idleague}}/edit/{{x._id}}" class="delete-edit-button edit-button-1"><i class="fas fa-pencil-alt"></i></button>
-                        <button class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
+                        <button (click)="deleteTeam(x._id)" class="delete-edit-button delete-button-1"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
             </div>
