--- a/frontend/src/app/components/index/index.component.html
+++ b/frontend/src/app/components/index/index.component.html
@@ -49,7 +49,7 @@
                                 <span>Usuarios</span>
                             </div>
                         </a>
-                        <a routerLink="/admin/charts" id="charts " class="m-container shadowed-div option-panel ">
+                        <a routerLink="/admin/charts" id="charts" class="m-container shadowed-div option-panel ">
                             <div>
                                 <img src="../../../assets/dist/img/timeline_black_24dp.svg " alt="soccer-ball.jpg ">
                             </div>
@@ -77,7 +77,9 @@
                                 <li>Jorge Eduardo Morataya Socop - 2019041</li>
                             </ul>
                             <span class="m-b-20" style="font-size:20px; display: block;">¡Bienvenido <b>{{username}}</b>!</span>
-                            <p><a routerLink="/user/my-leagues"> <button class="btn">Administra tus ligas ya!</button> </a></p>
+                            <p>
+                                <a routerLink="/user/my-leagues"> <button class="btn">Administra tus ligas ya!</button> </a>
+                            </p>
                             <i class="m-t-20 " style="display: block; color: #aaa;">@2021 - IN6BM</i>
                         </div>
                     </div>
